--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,55 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Node
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-dist/
-build/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Database
-*.db
-*.sqlite
-
-# OS
-.DS_Store
-Thumbs.db
+# CS3 Quiz Platform - Git Ignore File
 
 # Logs
+logs/
 *.log
+migration-output.txt
 
+# Environment files
+.env
+.env.local
+
+# IDE files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.bak
+*.old
+*~
+
+# Database backups
+*.sql.backup
+*.sql.bak
+
+# Configuration files with sensitive data (keep templates)
+config/gemini.php
+# Keep config/gemini.php.example instead
+
+# Session files
+sessions/
+
+# Cache files
+cache/
+*.cache
+
+# Vendor directories (if using Composer in future)
+vendor/
+
+# Node modules (if using npm in future)
+node_modules/
+
+# User uploads (if feature is added)
+uploads/
+
+CHANGELOG.md
